clean up pom.xml

--- a/brooklyn-cloudfoundry/src/test/resources/blueprints/spring-music-with-brooklyn-at-pcf-dev-location.yml
+++ b/brooklyn-cloudfoundry/src/test/resources/blueprints/spring-music-with-brooklyn-at-pcf-dev-location.yml
@@ -35,6 +35,5 @@ services:
        plan: default
        instanceName: br-mysql-for-spring-music
        parameters:
-         location: localhost
-         services:
-         - type: org.apache.brooklyn.entity.database.mysql.MySqlNode
+         $brooklyn:entitySpec:
+           type: org.apache.brooklyn.entity.database.mysql.MySqlNode
