--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <!--for AMP 4.3.0-atos-->
         <brooklyn.version>0.11.0-20170126.1332</brooklyn.version>
         <java.version>1.8</java.version>
-        <cloudfoundry.client.version>2.4.0.BUILD-SNAPSHOT</cloudfoundry.client.version>
+        <cloudfoundry.client.version>2.4.0.RELEASE</cloudfoundry.client.version>
         <reactor.core.version>3.0.5.RELEASE</reactor.core.version>
         <reactor.netty.version>0.6.0.RELEASE</reactor.netty.version>
 
